[gd_scene load_steps=15 format=2]

[ext_resource path="res://addons/discord_gd/discord.gd" type="Script" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Console.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Server/servers_tab.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Config.tscn" type="PackedScene" id=5]

[sub_resource type="StyleBoxFlat" id=1]
draw_center = false

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.286275, 0.32549, 0.788235, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.345098, 0.396078, 0.94902, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.309804, 0.329412, 0.360784, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.0705882, 0.0745098, 0.0823529, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id=6]
content_margin_left = 5.0
content_margin_right = 5.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0.188235, 0.219608, 0.529412, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_blend = true
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id=7]
content_margin_left = 5.0
content_margin_right = 5.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0.188235, 0.2, 0.219608, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_blend = true

[sub_resource type="StyleBoxFlat" id=8]
content_margin_left = 5.0
content_margin_right = 5.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0.0705882, 0.0745098, 0.0823529, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_color = Color( 0.309804, 0.329412, 0.360784, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2

[sub_resource type="Theme" id=9]
Button/styles/focus = SubResource( 1 )
Button/styles/hover = SubResource( 2 )
Button/styles/normal = SubResource( 3 )
Button/styles/pressed = SubResource( 4 )
TabContainer/styles/panel = SubResource( 5 )
TabContainer/styles/tab_bg = SubResource( 6 )
TabContainer/styles/tab_disabled = SubResource( 7 )
TabContainer/styles/tab_fg = SubResource( 8 )

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 9 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.133333, 0.133333, 0.133333, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DiscordBot" type="HTTPRequest" parent="."]
download_chunk_size = 10240
script = ExtResource( 1 )

[node name="TabContainer" type="TabContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
tab_align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Console" parent="TabContainer" instance=ExtResource( 3 )]
margin_top = 24.0

[node name="Config" parent="TabContainer" instance=ExtResource( 5 )]
visible = false
margin_top = 24.0

[node name="Servers" parent="TabContainer" instance=ExtResource( 4 )]
visible = false
margin_left = 0.0
margin_top = 24.0
margin_right = 0.0
margin_bottom = 0.0

[connection signal="bot_ready" from="DiscordBot" to="." method="_on_DiscordBot_bot_ready"]
[connection signal="event" from="DiscordBot" to="." method="_on_DiscordBot_event"]
[connection signal="guild_create" from="DiscordBot" to="." method="_on_DiscordBot_guild_create"]
[connection signal="interaction_create" from="DiscordBot" to="." method="_on_DiscordBot_interaction_create"]
[connection signal="message_create" from="DiscordBot" to="." method="_on_DiscordBot_message_create"]
